# Projeto_LI1

2022li1g102-main/: 2022li1g102.cabal  README.md
2022li1g102-main/doc/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
2022li1g102-main/src/: LI12223.hs  Main.hs  Tarefa1_2022li1g102.hs  Tarefa2_2022li1g102.hs  Tarefa3_2022li1g102.hs  Tarefa4_2022li1g102.hs  Tarefa5_2022li1g102.hs  fundo_1.bmp.webloc
2022li1g102-main/tests/: Spec.hs  Tarefa1_2022li1g102_Spec.hs  Tarefa2_2022li1g102_Spec.hs  Tarefa3_2022li1g102_Spec.hs  Tarefa4_2022li1g102_Spec.hs  Tarefa5_2022li1g102_Spec.hs
