cabal-version:      2.4
name:               2022li1g102
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

author:             André Sousa Miranda <a104088@alunos.uminho.pt>
                    Diogo José Fernandes Esteves <a104004@alunos.uminho.pt>

library
  exposed-modules:
    LI12223
    Tarefa1_2022li1g102
    Tarefa2_2022li1g102
    Tarefa3_2022li1g102
    Tarefa4_2022li1g102
  build-depends:    base ^>=4.16.3.0
  hs-source-dirs:   src
  default-language: Haskell2010

executable 2022li1g102
  main-is:          Main.hs
  other-modules:
    LI12223
    Tarefa1_2022li1g102
    Tarefa2_2022li1g102
    Tarefa3_2022li1g102
    Tarefa4_2022li1g102
  build-depends:    base ^>=4.16.3.0
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite 2022li1g102-tests
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  other-modules:
    LI12223
    Tarefa1_2022li1g102
    Tarefa2_2022li1g102
    Tarefa3_2022li1g102
    Tarefa4_2022li1g102
    Tarefa1_2022li1g102_Spec
    Tarefa2_2022li1g102_Spec
    Tarefa3_2022li1g102_Spec
    Tarefa4_2022li1g102_Spec
  build-depends:        base ^>=4.16.3.0, HUnit
  hs-source-dirs:       tests src
  default-language:     Haskell2010
